Fixes store page stretch

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 .page-section {
-    border-bottom: 3px solid #bbb;
     padding: 10px;
     margin: 10px;
 }
@@ -8,11 +7,34 @@
     display: flex;
     align-items: center;
     background-color: transparent;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 .card {
-    width: 80%;
-    min-width: 20%;
+    min-width: 280px;
+    width: 50%;
     text-align: center;
+}
+
+.login {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #f3f2f2;
+    margin: 90px 0 0 0;
+    padding: 10px;
+    width: 70%;
+    max-width: 800px;
+}
+
+nav {
+    background-color: #f3f2f2;
+}
+
+.box-shadow {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.link {
+    color: black;
 }
